# bitarray

./: .gitignore  bitarray-impl.hh  bitarray-test.cc  bitarray-test.cpp  bitarray.hh  bitarray.hpp  divide-test.cc  divide-test.cpp  meson.build  pdep-pext.hh  readme.md  simd.md  template-loop.hh  test.sh  todo.txt
